--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import './app/shared/styles/grid.scss';
+@import './app/shared/styles/support.scss';
 
 .opensans {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .exo2 {
-  font-family: "Exo 2", sans-serif;
+  font-family: 'Exo 2', sans-serif;
 }
+
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 * {
-    font-family: 'Open-Sans', sans-serif;
+  font-family: 'Open-Sans', sans-serif;
+}
+
+h1 {
+  font-family: 'Exo 2', sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+h2 {
+  font-family: 'Exo 2', sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+h3 {
+  font-family: 'Exo 2', sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.subtitle {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  font-weight: 600;
 }
