wip: notification service without styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <app-header></app-header>
     
     <main class="main-content">
+      <app-notification></app-notification>
       <router-outlet></router-outlet>
     </main>
   </div>
