--- a/src/app/features/new-cooperated/new-cooperated.component.scss
+++ b/src/app/features/new-cooperated/new-cooperated.component.scss
@@ -14,3 +14,10 @@
   letter-spacing: 0;
   color: $grey-4;
 }
+
+.timeline {
+  height: 111px;
+  display: block;
+  position: relative;
+  top: 15px;
+}
