--- a/src/app/features/new-cooperated/components/custom-account-card/custom-account-card/custom-account-card.component.scss
+++ b/src/app/features/new-cooperated/components/custom-account-card/custom-account-card/custom-account-card.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../shared/styles/tokens.scss';
 
-.registration-status-card {
+.custom-account-card {
     height: 358px;
     width: 230px;
     max-width: 230px;
@@ -29,13 +29,9 @@
         flex-direction: column;
         row-gap: 16px;
     }
-    &__info-value {
-        font-size: 14px;
-    }
     &__icon {
-        width: 28px;
-        height: 28px;
-        margin-right: 20px;
+        width: 32px;
+        height: 32px;
     }
 
 }
