--- a/src/app/features/new-cooperated/components/registration-status-card/registration-status-card/registration-status-card.component.html
+++ b/src/app/features/new-cooperated/components/registration-status-card/registration-status-card/registration-status-card.component.html
@@ -6,12 +6,10 @@
   <div class="registration-status-card__infos mt-3">
     <div class="registration-status-card__info">
       <div class="registration-status-card__row">
-        <div style="width: 25%">
-          <img
-            class="registration-status-card__icon"
-            src="../../../../../../assets/icons/person.svg"
-          />
-        </div>
+        <img
+          class="registration-status-card__icon"
+          src="../../../../../../assets/icons/person.svg"
+        />
         <div style="width: 75%">
           <div class="registration-status-card__subtitle">Nome</div>
           <span class="registration-status-card__info-value">{{ client.name }}</span>
@@ -20,12 +18,10 @@
     </div>
     <div class="registration-status-card__info">
       <div class="registration-status-card__row">
-        <div style="width: 25%">
-          <img
-            class="registration-status-card__icon"
-            src="../../../../../../assets/icons/document.svg"
-          />
-        </div>
+        <img
+          class="registration-status-card__icon"
+          src="../../../../../../assets/icons/document.svg"
+        />
         <div style="width: 75%">
           <div class="registration-status-card__subtitle">CPF</div>
           <span class="registration-status-card__info-value">{{ client.document }}</span>
@@ -34,15 +30,14 @@
     </div>
     <div class="registration-status-card__info">
       <div class="registration-status-card__row">
-        <div style="width: 25%">
-          <img
-            class="registration-status-card__icon"
-            src="../../../../../../assets/icons/check-circle.svg"
-          />
-        </div>
+        <img class="registration-status-card__icon" [src]="getIconSrc(client.documentStatus)" />
         <div style="width: 75%">
           <div class="registration-status-card__subtitle">Situação do CPF</div>
-          <span span class="registration-status-card__info-value">{{ client.documentStatus }}</span>
+          <span
+            span
+            class="registration-status-card__info-value"
+            >{{ client.documentStatus  }}</span
+          >
         </div>
       </div>
     </div>
