--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,96 +1,97 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .header-left h1 {
-    font-size: 1.5rem;
-    line-height: 32px;
-    margin: 0;
-  }
-  
-  .header-left p {
-    font-size: 0.75rem;
-    line-height: 18px;
-    color: gray;
-    margin: 0;
-  }
-  
-  .header-right {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    .notification {
-      .icon {
-        height: 28px;
-        width: 28px;
-      }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.header-left h1 {
+  font-size: 1.5rem;
+  line-height: 32px;
+  margin: 0;
+}
+
+.header-left p {
+  font-size: 0.75rem;
+  line-height: 18px;
+  color: gray;
+  margin: 0;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  .notification {
+    .icon {
+      height: 28px;
+      width: 28px;
     }
   }
-  
-  .notification {
-    background: none;
-    border: none;
-    position: relative;
-    font-size: 1.5rem;
-    cursor: pointer;
+}
+
+.notification {
+  background: none;
+  border: none;
+  position: relative;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: red;
+  color: white;
+  font-size: 16px;
+  border-radius: 50%;
+  height: 16px;
+  width: 16px;
+  font-size: 0.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile {
+  background: none;
+  border: 1px solid #125d79;
+  border-radius: 30px 30px 30px 30px;
+  height: 32px;
+  padding: 0 0.75rem;
+  font-size: 1rem;
+  min-width: 100px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: #125d79;
+}
+
+.profile-photo {
+  position: relative;
+
+  .avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #125d79;
   }
-  
-  .badge {
+  .gear {
     position: absolute;
-    top: 0;
+    bottom: 0;
     right: 0;
-    background-color: red;
-    color: white;
-    font-size: 16px;
+    background-color: white;
     border-radius: 50%;
     height: 16px;
     width: 16px;
-    font-size: 0.75rem;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .profile {
-    background: none;
-    border: 1px solid #125D79;
-    border-radius: 30px 30px 30px 30px;
-    height: 32px;
-    padding: 0 0.75rem;
-    font-size: 1rem;
-    min-width: 100px;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    color: #125D79;
   }
-  
-  .profile-photo {
-    position: relative;
-    .avatar {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 1px solid #125D79;
-    }
-    .gear {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      background-color: white;
-      border-radius: 50%;
-      height: 16px;
-      width: 16px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-    }
-  }
+}
