--- a/src/app/features/new-cooperated/new-cooperated.component.html
+++ b/src/app/features/new-cooperated/new-cooperated.component.html
@@ -47,11 +47,11 @@
     *ngIf="client"
     class="ml-2"
     (buttonClick)="comingSoon()"
-    [size]="'small'"
+    [size]="'medium'"
     [variant]="'primary'"
     >Iniciar nova admissão</app-button
   >
-  <app-button class="ml-2" (buttonClick)="comingSoon()" [size]="'small'" [variant]="'secondary'">
+  <app-button class="ml-2" (buttonClick)="comingSoon()" [size]="'medium'" [variant]="'secondary'">
     Dicas para admissão
   </app-button>
 </footer>
